--- a/aratanda-web/src/App.scss
+++ b/aratanda-web/src/App.scss
@@ -1,38 +1,37 @@
+body,
+html {
+    height: 100vh;
+    font-size: calc(0.69rem + 1vmin);
+}
+* {
+    box-sizing: border-box;
+}
+#root {
+    height: 100%;
+}
 .App {
-  text-align: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tab-item {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 10px;
+    background-color: lightcoral;
+    width: 3rem;
+    padding: 4px;
+    color: white;
+    border: 1px solid white;
+    border-top-right-radius: 2rem;
+    cursor: pointer;
+    &:hover {
+        background-color: crimson !important;
+        z-index: 10;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.channel {
 }
