--- a/aratanda-web/src/App.scss
+++ b/aratanda-web/src/App.scss
@@ -21,6 +21,13 @@ html {
     box-sizing: border-box;
     font-family: PressStart2P;
 }
+button {
+    cursor: pointer;
+    &:hover {
+        position: relative;
+        top: 1px;
+    }
+}
 #root {
     height: 100%;
 }
@@ -54,7 +61,17 @@ html {
     justify-content: center;
 
     &.start {
-        justify-content: start;
+        justify-content: flex-start;
+    }
+    &.around {
+        justify-content: space-around;
+    }
+
+    &.col {
+        flex-direction: column;
+        &.start {
+            align-items: flex-start;
+        }
     }
 }
 
