--- a/aratanda-web/src/App.scss
+++ b/aratanda-web/src/App.scss
@@ -17,6 +17,22 @@ html {
     height: 100vh;
     font-size: calc(0.4rem + 1vmin);
 }
+*::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: rgba(163, 73, 163, 0.5);
+    border-radius: 5rem;
+    width: 1rem;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(180deg, #91066e 0%, #5c0346 99%);
+    border-radius: 5rem;
+    width: 1rem;
+}
+
 * {
     box-sizing: border-box;
     font-family: PressStart2P;
